[package]
name = "crawl"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/007gzs/crawl/"
authors = ["007gzs <007gzs@gmail.com>"]
description = "Rust crawl"
readme = "README.md"
keywords = ["crawl", "spider", "http"]
include = ["/src", "/examples", "Cargo.toml", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
anyhow = "1.0"

[dev-dependencies]
select = "0.6"
url = "2"
json = "0.12"
futures = "0.3"
clap = "4"
encoding_rs = "0.8"